fixed flickering of "scope__item" block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -503,9 +503,9 @@ section {
     -webkit-transition: width 0.3s ease-in-out;
     -moz--transition: width 0.3s ease-in-out;
     transition: width 0.3s ease-in-out;
-	-webkit-transform: translateX(-50%);
-	-moz-transform: translateX(-50%);
-	transform: translateX(-50%);
+	  -webkit-transform: translateX(-50%);
+	  -moz-transform: translateX(-50%);
+	  transform: translateX(-50%);
     border-radius: 100px;
   }
   &:hover {
@@ -1075,9 +1075,9 @@ section {
       left: 50%;
     }
 
-    &:hover {
-      pointer-events: none;
-    }
+    // &:hover {
+    //   pointer-events: none;
+    // }
 
     @media (max-width: $tab_860) {
       display: none;
